# RAG-Based-Sales-Data-Analysis

./: .gitignore  README.md  category_analysis.txt  pyproject.toml  region_analysis.txt  row_descriptions.txt  trend_analysis.txt
src/sales_data_analysis/: chunk_docs.py  create_database.py  db.py  main.py  parse_data.py  vector_embeddings.py
tests/: test_system.py
