[project]
name = "sales-data-analysis"
version = "0.1.0"
description = ""
authors = [
    {name = "Simona",email = "simonacallegari@outlook.com"}
]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12"
pandas = "^2.2.2"
numpy = "^1.26.4"

[tool.poetry]
packages = [{include = "sales_data_analysis", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
