[project]
name = "sales-data-analysis"
version = "0.1.0"
description = ""
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12"
pandas = "^2.2.2"
numpy = "^1.26.4"
sentence-transformers = "^5.3.0"
chromadb = "^1.5.5"

[tool.poetry]
packages = [{include = "sales_data_analysis", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
