[project]
name = "sales-data-analysis"
version = "0.1.0"
description = ""
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<4.0.0"
pandas = "^2.2.2"
numpy = ">=2.1.0"
sentence-transformers = "^5.3.0"
chromadb = "^1.5.5"
ollama = "^0.6.1"
langchain = "^1.2.15"
langchain-ollama = "^1.1.0"
langchain-huggingface = "^1.2.1"
langchain-chroma = "^1.1.0"
langchain-core = "^1.2.28"

[tool.poetry.group.dev.dependencies]
pylint = "^4.0.5"
autopep8 = "^2.3.2"

[tool.poetry]
packages = [{include = "sales_data_analysis", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
